--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -43,8 +43,10 @@
   <ItemGroup>
     <Compile Include="IEntity.cs" />
     <Compile Include="Kategori.cs" />
+    <Compile Include="Kullanici.cs" />
     <Compile Include="Marka.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Urun.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
