--- a/UrunYonetimiStokTakibi/UrunYonetimiStokTakibi.csproj
+++ b/UrunYonetimiStokTakibi/UrunYonetimiStokTakibi.csproj
@@ -58,13 +58,37 @@
     <Compile Include="KategoriYonetimFrm.Designer.cs">
       <DependentUpon>KategoriYonetimFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="KullaniciYonetim.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KullaniciYonetim.Designer.cs">
+      <DependentUpon>KullaniciYonetim.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MarkaYonetimiFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarkaYonetimiFrm.Designer.cs">
+      <DependentUpon>MarkaYonetimiFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UrunYonetimFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UrunYonetimFrm.Designer.cs">
+      <DependentUpon>UrunYonetimFrm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Giris.resx">
       <DependentUpon>Giris.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="KategoriYonetimFrm.resx">
       <DependentUpon>KategoriYonetimFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KullaniciYonetim.resx">
+      <DependentUpon>KullaniciYonetim.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MarkaYonetimiFrm.resx">
+      <DependentUpon>MarkaYonetimiFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -75,6 +99,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UrunYonetimFrm.resx">
+      <DependentUpon>UrunYonetimFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
